# skillet

./: .gitignore  Cargo.toml  LICENSE  README.md  genhsv.py  run.sh
res/: colormaps.json  hex.vtu  ico-tensor.vtu  ico.vtu  ico64.vtu  teapot.vtu
src/: app.rs  background.rs  colormaps.rs  consts.rs  edge.glsl  frag.glsl  lib.rs  main.rs  math.rs  model.rs  shaders.rs  utils.rs  vert.glsl
utils/: genhex.py
