[package]
name = "skillet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#glium = "*"
glium = "0.32.1"
image = "0.24.3"
vtkio = "0.6"

#[dependencies.glfw]
#git = "https://github.com/bjz/glfw-rs.git"

